@@ -141,14 +141,16 @@ COM_CONFIG_FIELD_SITE_NAME_DESC="Enter the name of your Web site. This will be u
 COM_CONFIG_FIELD_SITE_NAME_LABEL="Site Name"
 COM_CONFIG_FIELD_SITE_OFFLINE_DESC="Select whether access to the Site frontend is available. If Yes, the frontend will display the message below."
 COM_CONFIG_FIELD_SITE_OFFLINE_LABEL="Site Offline"
-COM_CONFIG_FIELD_SITENAME_PAGETITLES_DESC="Begin all Page Titles with the site name (for example, My Site Name - My Article Name)."
+COM_CONFIG_FIELD_SITENAME_PAGETITLES_DESC="Begin or end all Page Titles with the site name (for example, My Site Name - My Article Name)."
 COM_CONFIG_FIELD_SITENAME_PAGETITLES_LABEL="Include Site Name in Page Titles"
 COM_CONFIG_FIELD_TEMP_PATH_DESC="Please select a writable Temp folder."
 COM_CONFIG_FIELD_TEMP_PATH_LABEL="Path to Temp Folder"
 COM_CONFIG_FIELD_UNICODESLUGS_DESC="Choose between transliteration and unicode aliases. Transliteration is default."
 COM_CONFIG_FIELD_UNICODESLUGS_LABEL="Unicode Aliases"
 COM_CONFIG_FIELD_VALUE_ADMINISTRATOR_ONLY="Administrator Only"
+COM_CONFIG_FIELD_VALUE_AFTER="After"
 COM_CONFIG_FIELD_VALUE_AUTHOR_EMAIL="Author Email"
+COM_CONFIG_FIELD_VALUE_BEFORE="Before"
 COM_CONFIG_FIELD_VALUE_CACHE_OFF="OFF - Caching disabled"
 COM_CONFIG_FIELD_VALUE_CACHE_CONSERVATIVE="ON - Conservative caching"
 COM_CONFIG_FIELD_VALUE_CACHE_PROGRESSIVE="ON - Progressive caching"
