@@ -60,8 +60,11 @@ class SearchViewSearch extends JView
 		}
 
 		$title = $params->get('page_title');
-		if ($app->getCfg('sitename_pagetitles', 0)) {
+		if ($app->getCfg('sitename_pagetitles', 0) == 1) {
 			$title = JText::sprintf('JPAGETITLE', $app->getCfg('sitename'), $title);
+		}
+		elseif ($app->getCfg('sitename_pagetitles', 0) == 2) {
+			$title = JText::sprintf('JPAGETITLE', $title, $app->getCfg('sitename'));
 		}
 		$this->document->setTitle($title);
 
